src/objects/Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <formula>Outcome__r.Contract__r.Name</formula>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag used to determine if the milestone should be counted or not. It will be used only by reporting and set by code. It should not be exposed on layout.</description>
        <inlineHelpText>Flag used to determine if the milestone should be counted or not. It will be used only by reporting and set by code. It should not be exposed on layout.</inlineHelpText>
        <label>Count?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Milestone_Met__c</fullName>
        <description>This is the Date of Service from the Service Participation.</description>
        <formula>Service_Participation__r.Date_of_Service__c</formula>
        <inlineHelpText>This is the Date of Service from the Service Participation.</inlineHelpText>
        <label>Date Milestone Met</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DescriptionFormula__c</fullName>
        <formula>Template_Milestone__r.Description__c</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_NameFormula__c</fullName>
        <formula>Template_Milestone__r.Milestone_Name__c</formula>
        <label>Milestone Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <referenceTo>Outcome__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Performance_Commitment__c</fullName>
        <formula>Template_Milestone__r.Performance_commitment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Participation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Participation</label>
        <referenceTo>ServiceParticipation__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Met</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Template_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent template milestone.</description>
        <inlineHelpText>Parent template milestone.</inlineHelpText>
        <label>Template Milestone</label>
        <referenceTo>Template_Milestone__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Milestone</label>
    <nameField>
        <displayFormat>ML-{00000}</displayFormat>
        <label>Milestone Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>